@@ -39,6 +39,9 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Export nicer display names for users and resources via WebDAV.
+* [jan] Export custom owner and read-only properties via WebDAV.
+* [jan] Fix exporting contacts without __uid attributes via WebDAV.
 * [jan] Fix importing empty birthdays/anniversaries from vCard.
 * [mjr] Fix defaulting to the defined search fields when searching via the API.
 * [mjr] Fix broken EAS synchronization due to incorrect setting of the Categories field.
@@ -1937,6 +1940,9 @@
    <date>2014-09-05</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [jan] Export nicer display names for users and resources via WebDAV.
+* [jan] Export custom owner and read-only properties via WebDAV.
+* [jan] Fix exporting contacts without __uid attributes via WebDAV.
 * [jan] Fix importing empty birthdays/anniversaries from vCard.
 * [mjr] Fix defaulting to the defined search fields when searching via the API.
 * [mjr] Fix broken EAS synchronization due to incorrect setting of the Categories field.
