@@ -2,6 +2,9 @@
 v4.2.3-git
 ----------
 
+[jan] Export nicer display names for users and resources via WebDAV.
+[jan] Export custom owner and read-only properties via WebDAV.
+[jan] Fix exporting contacts without __uid attributes via WebDAV.
 [jan] Fix importing empty birthdays/anniversaries from vCard.
 [mjr] Fix defaulting to the defined search fields when searching via the API.
 [mjr] Fix broken EAS synchronization due to incorrect setting of the
